# feed

./: .gitignore  load_json_mongo.py  makefile  pyproject.toml
feed/: __init__.py  app.py  conf.py  script.py  twt.py
feed/templates/: base.html  index.html
tests/: delete.html  test_feed.py
